traefik/manifests/01_traefik-dashboard-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: traefik
    tier: reverse-proxy
spec:
  rules:
  - host: traefik.mmontes-dev.duckdns.org
    http:
      paths:
      - backend:
          serviceName: traefik-dashboard
          servicePort: 80
